Corregí validación para permitir espacios

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <section>
-            <textarea class="text-area" cols="30" rows="10" placeholder="Ingrese el texto aqui"></textarea>
+            <textarea class="text-area" cols="41" rows="10" placeholder="Ingrese el texto aqui"></textarea>
             <div>
                 <h6 class="informacion">Sólo letras minúsculas y sin acentos</h6>
             </div>
@@ -32,7 +32,11 @@
             </div>
         </section>
     </main>
-<script src="script.js"></script>    
+    <script src="script.js"></script> 
+    <footer>
+        <p class="copyrigth">&copy2023 - Desarrollado por Paula Vrelly</p>
+    </footer>
+
     
 </body>
 </html>
