--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"&amp;gt>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="only screen and (max-width: 768px)" href="estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&family=Montserrat:wght@300&display=swap" rel="stylesheet">
@@ -18,7 +19,7 @@
         <section>
             <textarea class="text-area" cols="41" rows="10" placeholder="Ingrese el texto aqui"></textarea>
             <div>
-                <h6 class="informacion">Sólo letras minúsculas y sin acentos</h6>
+                <h6 class="informacion">Sólo letras minúsculas, sin acentos y signos de puentuación</h6>
             </div>
             <div class="botones">
                 <button class="btn-encriptar" onclick="btnEncriptar()">Encriptar</button>
