Probando modificar el stylesheet para que se vea toda la página y corregí puntuación

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section>
             <textarea class="text-area" cols="41" rows="10" placeholder="Ingrese el texto aqui"></textarea>
             <div>
-                <h6 class="informacion">Sólo letras minúsculas, sin acentos y signos de puentuación</h6>
+                <h6 class="informacion">Sólo letras minúsculas, sin acentos y signos de puntuación</h6>
             </div>
             <div class="botones">
                 <button class="btn-encriptar" onclick="btnEncriptar()">Encriptar</button>
