Probando diferencias con otro código. Aguregué mediaquierys

--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"&amp;gt>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="only screen and (max-width: 768px)" href="estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Itim&family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <title class="titulo">Mensajes secretos</title>
 </head>
 <body>
     <header>
-        <img class="logo" src="imagenes/Fondo3s.png" alt="Logo de Alura">
+        <img class="logo" src="imagenes/Fondo3s.png" alt="Logo MiradaVioleta">
     </header>
     <main>
         <section>
-            <textarea class="text-area" cols="41" rows="10" placeholder="Ingrese el texto aqui"></textarea>
+            <textarea class="text-area" cols="40" rows="5" placeholder="Ingrese el texto aqui"></textarea>
             <div>
                 <h6 class="informacion">Sólo letras minúsculas, sin acentos y signos de puntuación</h6>
             </div>
