Apliqué las mediaquerys diferente y parece que funciona

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <header>
         <img class="logo" src="imagenes/Fondo3s.png" alt="Logo MiradaVioleta">
+        
     </header>
     <main>
         <section>
@@ -36,7 +37,7 @@
     </main>
     <script src="script.js"></script> 
     <footer>
-        <p class="copyrigth">&copy2023 - Desarrollado por Paula Vrelly</p>
+        <p class="copyrigth" cols="40" rows="20">&copy2023 - Desarrollado por Paula Vrelly</p>
     </footer>
 
     
